# avibe

./: AGENTS.md  README.md  README_ZH.md  install.sh  pyproject.toml
.github/workflows/: build-git.yml  git-runtime-release-guard.yml  lint.yml  publish.yml  publish_npm.yml  release_ai.yml
config/: paths.py  platform_registry.py  v2_compat.py  v2_config.py  v2_sessions.py  v2_settings.py
core/: agent_auth_service.py  agent_session_context.py  auth.py  avibe_cloud.py  backend_failure.py  bind_security.py  caller_context.py  chat_discovery.py  controller.py  dock_store.py  file_browser_service.py  git_binary.py  git_runtime.py  inbox_events.py  internal_server.py  managed_runtime.py  message_context.py  message_dispatcher.py  message_mirror.py  modals.py  processing_indicator.py  reply_enhancer.py  resource_governance.py  scheduled_tasks.py  session_turns.py  show_git.py  show_pages.py  show_runtime.py  show_session_events.py  system_prompt_injection.py  terminal_service.py  update_checker.py  vault_request_notifications.py  vibe_agents.py  watches.py  workbench_media.py
core/handlers/: base.py  command_handlers.py  message_handler.py  session_handler.py  (+1 more)
docs/: CLI.md  CLI_ZH.md  CODEX_SETUP.md  COMMANDS.md  COMMANDS_ZH.md  DYNAMIC_ROUTING_DESIGN.md  TELEGRAM_SETUP.md  TELEGRAM_SETUP_ZH.md
modules/: agent_router.py  session_manager.py  sessions_facade.py  settings_manager.py
scripts/: incus_regression.py  incus_tenant.py  prepare_regression.py
storage/: agent_activity_service.py  agent_events_service.py  agent_session_rows.py  background.py  db.py  importer.py  media_service.py  messages_service.py  migrations.py  models.py  projects_service.py  read_only_query.py  sessions_service.py  settings_service.py  vault_addresses.py  vault_crypto.py  vault_protected.py  vault_service.py  vault_webauthn.py  workbench_sessions_service.py
tests/: conftest.py  test_agent_activity_service.py  test_agent_auth_service.py  test_agent_backend_alive.py  test_agent_graph_service.py  test_agent_initiated_turn_fsm.py  test_agent_run_target.py  test_agent_service.py  test_agent_silent_result.py  test_agents_graph_route.py  test_api_save_config_merge.py  test_auth_pipeline.py  test_avault_agent.py  test_backend_failure.py  test_backend_model_catalog.py  test_background_work_banner.py  test_bind_code_api.py  test_bind_security.py  test_caller_context.py  test_chat_discovery.py  test_claude_agent_initiated_turn.py  test_claude_agent_sessions.py  test_claude_cli_path.py  test_claude_model_catalog.py  test_claude_process_reaper.py  test_claude_reasoning_options.py  test_claude_receiver_result_settle.py  test_claude_sdk_compat.py  test_claude_subprocess_env.py  test_claude_token_usage.py  test_cli_agent_run_schema.py  test_cli_pagination.py  test_cli_task_command.py  test_cli_watch_command.py  test_codex_agent.py  test_codex_config.py  test_codex_event_handler.py  test_codex_token_usage.py  test_codex_transport.py  test_command_handler_user_names.py  (+134 more)
ui/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/src/: App.tsx  (+1 more)
vibe/: api.py  avault_agent.py  backend_model_catalog.py  build_identity.py  claude_config.py  claude_model_catalog.py  cli.py  git_runtime_manifest.json  inbox_bridge.py  internal_client.py  opencode_config.py  remote_access.py  restart_supervisor.py  runtime.py  sentry_integration.py  ui_server.py  upgrade.py
(+348 files in other folders)
