[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "avibe-os"
dynamic = ["version"]
description = "Local-first Agent OS for Web and IM agent workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "cyhhao", email = "cyhhao@users.noreply.github.com" }
]
keywords = [
    "slack",
    "discord",
    "telegram",
    "wechat",
    "lark",
    "feishu",
    "ai",
    "agent",
    "agent-os",
    "claude-code",
    "opencode",
    "codex",
    "automation",
    "chatops",
    "vibe-coding",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "claude-agent-sdk>=0.2.93",
    "anyio>=4.0.0",
    "APScheduler>=3.10.4",
    "slack-sdk>=3.26.0",
    "discord.py>=2.4.0",
    "aiohttp>=3.8.0",
    "markdown_to_mrkdwn>=0.2.0",
    "typing_extensions>=4.12.2",
    "PyYAML>=6.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "fastapi>=0.110",
    "lark-oapi>=1.4.0",
    "requests>=2.31.0",
    "sentry-sdk>=2.0.0",
    "python-socks[asyncio]>=2.0.0",
    "aiohttp-socks>=0.8.0",
    "httpx[socks]>=0.27",
    "python-multipart>=0.0.9",
    "PyJWT[crypto]>=2.9.0",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.13.0",
    "psutil>=5.9.0",
    "packaging>=23.0",
    "uvicorn[standard]>=0.27",
    "imagesize>=1.4.1",
    "pywebpush>=2.0.3",
]

[project.urls]
Homepage = "https://github.com/avibe-bot/avibe"
Repository = "https://github.com/avibe-bot/avibe"
Documentation = "https://github.com/avibe-bot/avibe#readme"
Issues = "https://github.com/avibe-bot/avibe/issues"

[project.scripts]
vibe = "vibe.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "vibe/_version.py"

[tool.hatch.build]
# Include generated assets even though they are in .gitignore (build artifacts)
artifacts = ["ui/dist/**", "vibe/show_runtime_manifest.json"]

[tool.hatch.build.targets.wheel]
packages = ["vibe", "config", "core", "modules", "storage"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "vibe/service_main.py"
"ui/dist" = "vibe/ui/dist"

[tool.hatch.build.targets.sdist]
# Include ui/dist for source distribution
include = [
    "vibe/**",
    "config/**",
    "core/**",
    "modules/**",
    "storage/**",
    "main.py",
    "ui/dist/**",
    "vibe/show_runtime_manifest.json",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 120
src = ["."]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]
extend-ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: platform integration tests requiring Docker + platform tokens",
    "uses_real_paths: opt out of the autouse home/config isolation so the test can exercise real path resolvers (must remain read-only)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
